--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div>
-            <h1>Looking good!</h1>
+            <h1>Edit shit in the src please fellas</h1>
             <p>Go ahead and edit me.</p>
         </div>
     </body>
