--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="node_modules/bulma/css/bulma.css" />
-        <title>Assignment 0 test!</title>
+        <title>CH Housing Portal</title>
     </head>
     <body>
         <section class="hero is-dark is-bold is-medium">
