test edit index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <title>CH Housing Portal</title>
     </head>
     <body>
+
+        <h1> TEST EDIT </h1>
+
         <section class="hero is-dark is-bold is-medium">
             <div class="hero-body is-center">
                 <div class="container has-text-centered">
