--- a/index.html
+++ b/index.html
@@ -7,43 +7,17 @@
     <body>
 
         <div id="login_div" class="mainLoginDiv" >
-            <h2>Platform Login</h2>
-            <input type="email" placeholder="Enter Email..." id="email_field"></input><br>
+            <h2>Stock Sentiments - Login</h2>
+            <input type="username" placeholder="Enter Username..." id="username_field"></input><br>
             <input type="password" placeholder="Enter Password..." id="password_field"><br>
 
             <button onclick="login()">Login to Account</button>
         </div>
 
-        <div id="user_div">
+        <div id="user_div" style="display: none">
             <h1>Success. You are logged in</h1>
             <button onclick="logout()">Logout</button>
         </div>
-
-
-        <!-- The core Firebase JS SDK is always required and must be listed first -->
-        <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-app.js"></script>
-
-        <!-- TODO: Add SDKs for Firebase products that you want to use
-            https://firebase.google.com/docs/web/setup#available-libraries -->
-        <script src="https://www.gstatic.com/firebasejs/8.1.1/firebase-analytics.js"></script>
-
-        <script>
-            // Your web app's Firebase configuration
-            // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-            var firebaseConfig = {
-                apiKey: "AIzaSyBaF7_L2JeKbLRh7DZ2yelybRZC4iD_fow",
-                authDomain: "zrdjlogin.firebaseapp.com",
-                databaseURL: "https://zrdjlogin.firebaseio.com",
-                projectId: "zrdjlogin",
-                storageBucket: "zrdjlogin.appspot.com",
-                messagingSenderId: "983798598131",
-                appId: "1:983798598131:web:a492a0bad1df66fcc9aa86",
-                measurementId: "G-3JTEWTF994"
-            };
-            // Initialize Firebase
-            firebase.initializeApp(firebaseConfig);
-            firebase.analytics();
-        </script>
         
         <script src="index.js"></script>
 
