--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         <script src='node_modules\axios\dist\axios.js'></script>
         <script src='node_modules\jquery\dist\jquery.js'></script>
-        <script src="index.js"></script>
+        <script src="index.js" type='module'></script>
 
     </body>
 </html>
