--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <button onclick="logout()">Logout</button>
         </div>
         
-        <script src='node_modules\axios\dist\axios.js'></script>
-        <script src='node_modules\jquery\dist\jquery.js'></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="index.js"></script>
 
     </body>
