--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="index.js"></script>
+        <script src="login.js"></script>
 
     </body>
 </html>
