to deploy with basic ui

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <input type="password" placeholder="Enter Password..." id="password_field"><br>
 
             <button onclick="login()">Login to Account</button>
+            <button onclick="createAccount()">Create New Account</button>
         </div>
 
         <div id="user_div" style="display: none">
