login errors look better. No more alerts

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <h2>Stock Sentiments - Login</h2>
             <input type="username" placeholder="Enter Username..." id="username_field"></input><br>
             <input type="password" placeholder="Enter Password..." id="password_field"><br>
+            <p id="login_error"></p>
 
             <button onclick="login()">Login to Account</button>
             <button onclick="createAccount()">Create Account</button>
