--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
         <script src="index.js"></script>
         <script src="login.js"></script>
 
