--- a/index.html
+++ b/index.html
@@ -20,16 +20,12 @@
 
             <div id="main">
                 <div id="search">
-                    <input type="search" id="searchbar" name="search" placeholder="Search ...">
-                    <button id="searchbutton">Search</button>
+                    <input type="text" id="searchbar" name="search" placeholder="Search ...">
+                    <button onclick="addTicker()">Add Ticker</button>
                 </div>
 
                 <div id="tickandsent">
-                    <div id="tickers">
-                        <div class="ticker">
-                            
-                        </div>
-                    </div>
+                    <div id="tickers"></div>
                     <div id="sentiment">
                         <div class="meter">
                             <meter max="100" low="33" high="66" optimum="67" value="65"></meter>
