--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <head>
         <title>Platform Login</title>
         <link rel='stylesheet' href='loginStyle.css'/>
-        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.1/css/bulma.min.css'/>
-
+        <!-- <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.1/css/bulma.min.css'/> -->
+g
     </head>
 
     <body>
