--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
         <script src="login.js"></script>
         <script src="graph.js"></script>
         <script src="autocomplete.js"></script>
-
+        <script src="data.js"></script>
     </body>
 </html>
