--- a/index.html
+++ b/index.html
@@ -34,17 +34,8 @@
 
                     <div id="tickers"></div>
 
-                    <div id="sentiment">
-                        <div class="meter">
-                            <meter max="100" low="33" high="66" optimum="67" value="65"></meter>
-                        </div>
-                        <div class="meter">
-                            <meter max="100" low="33" high="66" optimum="67" value="88"></meter>
-                        </div>
-                        <div class="meter">
-                            <meter max="100" low="33" high="66" optimum="67" value="10"></meter>
-                        </div>
-                    </div>
+                    <div id="sentiment"></div>
+                    
                 </div>
             </div>
 
