--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         </div>
 
         <div id="user_div" style="display: none">
-            <button id ="logout" onclick="logout()">Logout</button>
-
+            <div id="welcome">
+                <button id ="logout" onclick="logout()">Logout</button>
+            </div>
             <div id="main">
                 <div id="search">
                     <input list="alltickers" type="text" id="searchbar" name="search" placeholder="Add Ticker ...">
