removing content after logout

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         <div id="user_div" style="display: none">
             <div id="welcome">
+                <h1 id="welcome_user"></h1>
                 <button id ="logout" onclick="logout()">Logout</button>
             </div>
             <div id="main">
