--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                 </div>
             </div>
 
+            <div class="desc">
+                <p id="desc">Write here</p>
+            </div>
+
         </div>
         
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
