zack wrote description

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
             </div>
 
             <div class="desc">
-                <p id="desc">Write here</p>
+                <p id="desc">What is Sentiment Analysis? Sentiment analysis is a common Natural Language Processing technique used to 
+                    describe how positive or negative a body of text is. This is represented on a scale of -3 to 3 where -3 is very negative
+                    and 3 is very positive. Our method of sentiment analysis uses two datasets of positive and negative words and rates each tweet
+                    and article based on the average frequency of positive and negative words.
+                </p>
             </div>
 
         </div>
@@ -52,8 +56,6 @@
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
         <script src="index.js"></script>
         <script src="login.js"></script>
-        <script src="graph.js"></script>
-        <script src="autocomplete.js"></script>
         <script src="data.js"></script>
     </body>
 </html>
