--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
         <div id="user_div" style="display: none">
             <div id="welcome">
                 <h1 id="welcome_user"></h1>
-                <button id ="logout" onclick="logout()">Logout</button>
+                <button id ="logout" onclick="logout()">Logout</button><br>
+            </div>
+            <div id="descdiv">
+                <h4>What is Sentiment Analysis?</h4>
+                <p id="desc">Sentiment analysis is a common Natural Language Processing technique used to 
+                    describe how positive or negative a body of text is. This is represented on a scale of -3 to 3 where -3 is very negative
+                    and 3 is very positive. Our method of sentiment analysis uses two datasets of positive and negative words and rates each tweet
+                    and article based on the average frequency of positive and negative words.
+                </p>
             </div>
             <div id="main">
                 <div id="search">
@@ -41,13 +49,7 @@
                 </div>
             </div>
 
-            <div class="desc">
-                <p id="desc">What is Sentiment Analysis? Sentiment analysis is a common Natural Language Processing technique used to 
-                    describe how positive or negative a body of text is. This is represented on a scale of -3 to 3 where -3 is very negative
-                    and 3 is very positive. Our method of sentiment analysis uses two datasets of positive and negative words and rates each tweet
-                    and article based on the average frequency of positive and negative words.
-                </p>
-            </div>
+
 
         </div>
         
